# dictionary

./: .gitignore  CMakeLists.txt
include/: dawgInterface.h  dictTypes.h  dictionaryInterface.h
src/: dawgInterface.cpp  dictionaryInterface.cpp  main.cpp
